force-app/main/default/objects/Treatment_Plan__c/Treatment_Plan__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Service Plan</label>
    <nameField>
        <displayFormat>ServicePlan-{0000}</displayFormat>
        <label>Service Plan #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>