force-app/main/default/objects/Treatment_Plan__c/fields/Additional_Participants__c.field-meta.xml
<CustomField>
    <fullName>Additional_Participants__c</fullName>
    <label>Additional Participant(s)</label>
    <type>TextArea</type>
</CustomField>