force-app/main/default/objects/Treatment_Plan__c/fields/Case_Participation__c.field-meta.xml
<CustomField>
    <fullName>Case_Participation__c</fullName>
    <description>OM field to track the list of IDs for Case Participants (Outcome Configuration sObject Parents)</description>
    <label>Case Participation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>