force-app/main/default/objects/Treatment_Plan__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipName>Treatment_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>