force-app/main/default/objects/Treatment_Plan__c/fields/Client_Age__c.field-meta.xml
<CustomField>
    <fullName>Client_Age__c</fullName>
    <description>casey field</description>
    <formula>Case_Record__r.Main_Client__r.Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>