force-app/main/default/objects/Treatment_Plan__c/fields/Client_DOB__c.field-meta.xml
<CustomField>
    <fullName>Client_DOB__c</fullName>
    <formula>Case_Record__r.Main_Client__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client DOB</label>
    <type>Date</type>
</CustomField>