force-app/main/default/objects/Treatment_Plan__c/fields/Date_Signed_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_by_Client__c</fullName>
    <label>Date Signed by Client</label>
    <type>Date</type>
</CustomField>