force-app/main/default/objects/Treatment_Plan__c/fields/Date_Signed_by_Staff__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed_by_Staff__c</fullName>
    <label>Date Signed by Staff</label>
    <type>Date</type>
</CustomField>