force-app/main/default/objects/Treatment_Plan__c/fields/ECM_Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>ECM_Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The junction object that points to the ECM configuration used for this service plan.</description>
    <label>ECM Service Plan</label>
    <referenceTo>ECM_Service_Plan__c</referenceTo>
    <relationshipLabel>Service Plans</relationshipLabel>
    <relationshipName>Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>