force-app/main/default/objects/Treatment_Plan__c/fields/EcmIsLocked__c.field-meta.xml
<CustomField>
    <fullName>EcmIsLocked__c</fullName>
    <description>ECM field used to signal to the Service Plan that it is locked and should only show saved targeted Service Plan Indicators and no longer query for the latest outcomes.</description>
    <formula>CONTAINS(TEXT(Status__c), &apos;Final&apos;) || ExpIsLocked__c == true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EcmIsLocked</label>
    <type>Checkbox</type>
</CustomField>