force-app/main/default/objects/Treatment_Plan__c/fields/Exit_Plans__c.field-meta.xml
<CustomField>
    <fullName>Exit_Plans__c</fullName>
    <inlineHelpText>Identify participant(s) Plans following exit and the services and supports needed from CFP</inlineHelpText>
    <label>Exit Plans</label>
    <type>TextArea</type>
</CustomField>