force-app/main/default/objects/Treatment_Plan__c/fields/ExpIsLocked__c.field-meta.xml
<CustomField>
    <fullName>ExpIsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by unit tests -- do not delete or modify</description>
    <inlineHelpText>Used by unit tests -- do not delete or modify</inlineHelpText>
    <label>ExpIsLocked</label>
    <type>Checkbox</type>
</CustomField>