force-app/main/default/objects/Treatment_Plan__c/fields/Family_Needs_Safety_Perm_Well_Being__c.field-meta.xml
<CustomField>
    <fullName>Family_Needs_Safety_Perm_Well_Being__c</fullName>
    <inlineHelpText>What does the family need to have in place to meet the identified safety, permanency and/or well-being needs?</inlineHelpText>
    <label>Family Needs - Safety, Perm, Well-Being</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>