force-app/main/default/objects/Treatment_Plan__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>casey field</description>
    <label>Goal</label>
    <type>TextArea</type>
</CustomField>