force-app/main/default/objects/Treatment_Plan__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>