force-app/main/default/objects/Treatment_Plan__c/fields/Needs_for_Transition_out_of_Casey__c.field-meta.xml
<CustomField>
    <fullName>Needs_for_Transition_out_of_Casey__c</fullName>
    <inlineHelpText>Who/what is needed to transition the client out of Casey services and maintain continued success after the case is closed with Casey?</inlineHelpText>
    <label>Needs for Transition out of Casey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>