force-app/main/default/objects/Treatment_Plan__c/fields/Participant_s_Vision__c.field-meta.xml
<CustomField>
    <fullName>Participant_s_Vision__c</fullName>
    <label>Participant(s) Vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>