force-app/main/default/objects/Treatment_Plan__c/fields/Progress_Summary__c.field-meta.xml
<CustomField>
    <fullName>Progress_Summary__c</fullName>
    <inlineHelpText>Summary of progress made toward achieving permanency goal since last Service Plan Review.</inlineHelpText>
    <label>Progress Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>