force-app/main/default/objects/Treatment_Plan__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <label>Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>