force-app/main/default/objects/Treatment_Plan__c/fields/Service_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan_Name__c</fullName>
    <label>Service Plan Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>