force-app/main/default/objects/Treatment_Plan__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Providing approving the Treatment Plan</inlineHelpText>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>