force-app/main/default/objects/Treatment_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Treatment Not Started</fullName>
            </value>
            <value>
                <fullName>Treatment Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Treatment Completed</fullName>
            </value>
            <value>
                <fullName>Lost to Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>