force-app/main/default/objects/Treatment_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute Pharyngitis</fullName>
            </value>
            <value>
                <fullName>Chlamydia - Contact</fullName>
            </value>
            <value>
                <fullName>Chlamydia - Confirmed - Pharyngeal</fullName>
            </value>
            <value>
                <fullName>Chlamydia - Confirmed - Urethral</fullName>
            </value>
            <value>
                <fullName>Chlamydia - Confirmed - Rectal</fullName>
            </value>
            <value>
                <fullName>Folliculitis</fullName>
            </value>
            <value>
                <fullName>Genital Herpes</fullName>
            </value>
            <value>
                <fullName>Gonorrhea - Contact</fullName>
            </value>
            <value>
                <fullName>Gonnorrhea - Confirmed - Pharyngeal</fullName>
            </value>
            <value>
                <fullName>Gonnorrhea - Confirmed - Urethral</fullName>
            </value>
            <value>
                <fullName>Gonnorrhea - Confirmed - Rectal</fullName>
            </value>
            <value>
                <fullName>Health Consultation/Info Only</fullName>
            </value>
            <value>
                <fullName>Hepatitis C</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>HIV Testing/Counseling</fullName>
            </value>
            <value>
                <fullName>HPV</fullName>
            </value>
            <value>
                <fullName>Flu vaccine Immunization</fullName>
            </value>
            <value>
                <fullName>Hepatitis A Immunization</fullName>
            </value>
            <value>
                <fullName>Hepatitis B Immunization</fullName>
            </value>
            <value>
                <fullName>Hepatitis A/B Combo Immunization</fullName>
            </value>
            <value>
                <fullName>Molluscum</fullName>
            </value>
            <value>
                <fullName>Non-Specific Proctitus</fullName>
            </value>
            <value>
                <fullName>NSU</fullName>
            </value>
            <value>
                <fullName>NSU - Contact</fullName>
            </value>
            <value>
                <fullName>Pediculosis Pubis</fullName>
            </value>
            <value>
                <fullName>Prob. Scabies</fullName>
            </value>
            <value>
                <fullName>Probable Fungal Infection</fullName>
            </value>
            <value>
                <fullName>R/O STI</fullName>
            </value>
            <value>
                <fullName>Syphilis - Contact</fullName>
            </value>
            <value>
                <fullName>Syphilis - Presumptive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>